Deactivating merging for easier testing

--- a/.github/actions/auto-merge-pull-request/action.yml
+++ b/.github/actions/auto-merge-pull-request/action.yml
@@ -21,12 +21,12 @@ runs:
         label1: "merge-if-checks-succeed"
         label2: "merge-and-resolve-jira-issue-if-checks-succeed"
 
-    - name: Merge Pull Request
-      if: steps.check-mergeability.outputs.contains-label == 'true'
-      shell: pwsh
-      run: |
-        $url = "https://api.github.com/repos/${{ github.repository }}/pulls/${{ github.event.pull_request.number }}/merge"
-        Invoke-WebRequest $url -Headers (Get-GitHubApiAuthorizationHeader) -Method Put
+    #- name: Merge Pull Request
+    #  if: steps.check-mergeability.outputs.contains-label == 'true'
+    #  shell: pwsh
+    #  run: |
+    #    $url = "https://api.github.com/repos/${{ github.repository }}/pulls/${{ github.event.pull_request.number }}/merge"
+    #    Invoke-WebRequest $url -Headers (Get-GitHubApiAuthorizationHeader) -Method Put
 
     - name: Remove Label
       if: steps.check-mergeability.outputs.contains-label == 'true'
