--- a/.github/workflows/post-checks-automation.yml
+++ b/.github/workflows/post-checks-automation.yml
@@ -7,11 +7,11 @@ jobs:
   post-checks-automation:
     runs-on: ubuntu-latest
     steps:
-    - name: Automatically Merge Pull Request
-      if: github.event.pull_request != ''
-      uses: Lombiq/GitHub-Actions/.github/actions/auto-merge-pull-request@issue/OSOE-477
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+    #- name: Automatically Merge Pull Request
+    #  if: github.event.pull_request != ''
+    #  uses: Lombiq/GitHub-Actions/.github/actions/auto-merge-pull-request@issue/OSOE-477
+    #  env:
+    #    GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
     - name: Automatically Resolve or Done Jira issue
       if: github.event.pull_request != ''
