--- a/.github/actions/add-jira-issue-code-to-pull-request/action.yml
+++ b/.github/actions/add-jira-issue-code-to-pull-request/action.yml
@@ -8,6 +8,7 @@ runs:
       shell: pwsh
       run: |
         "${{ github.action_path }}" >> $Env:GITHUB_PATH
+        (Resolve-Path "${{ github.action_path }}/../../../Scripts").Path >> $Env:GITHUB_PATH
 
     - name: Add Jira Issue Code to Pull Request
       # If this is run for a PR opened from a fork (not from a branch in the given repo) then "Resource not accessible
@@ -20,7 +21,6 @@ runs:
           JiraBaseUrl = $Env:JIRA_BASE_URL ? $Env:JIRA_BASE_URL : "https://lombiq.atlassian.net"
           GitHubRepository = $Env:GITHUB_REPOSITORY
           Branch = $Env:GITHUB_HEAD_REF
-          GitHubToken = $Env:GITHUB_TOKEN
           Title = "${{ github.event.pull_request.title }}"
           Body = "${{ github.event.pull_request.body }}"
           PullRequestID = ${{ github.event.number }}
