--- a/.github/actions/auto-resolve-done-jira-issue/action.yml
+++ b/.github/actions/auto-resolve-done-jira-issue/action.yml
@@ -36,8 +36,8 @@ runs:
         $parameters = @{
             Repository = '${{ github.repository }}'
             PullRequestNumber = '${{ github.event.pull_request.number }}'
-            IsDone = '${{ steps.check-done.outputs.contains-label }} -eq 'True'
-            IsResolve = '${{ steps.check-resolve.outputs.contains-label }} -eq 'True'
+            IsDone = '${{ steps.check-done.outputs.contains-label }}' -eq 'True'
+            IsResolve = '${{ steps.check-resolve.outputs.contains-label }}' -eq 'True'
         }
         Initialize-IssueParameters @parameters
 
