--- a/.github/actions/auto-resolve-done-jira-issue/action.yml
+++ b/.github/actions/auto-resolve-done-jira-issue/action.yml
@@ -46,10 +46,10 @@ runs:
       run: |
         Write-Output "Key: ${{ steps.initialize-jira-issue-parameters.outputs.key }}"
         Write-Output "Transition: ${{ steps.initialize-jira-issue-parameters.outputs.transition }}"
-        Write-Output "Key: ${{ steps.initialize-jira-issue-parameters.outputs.can-transition }}"
+        Write-Output "Can transition: ${{ steps.initialize-jira-issue-parameters.outputs.can-transition }}"
 
     - name: Login to Jira
-      if: steps.check-done.outputs.contains-label == 'true' || steps.check-resolve.outputs.contains-label == 'true'
+      if: steps.initialize-jira-issue-parameters.outputs.can-transition == 'true'
       # v3
       uses: atlassian/gajira-login@ca13f8850ea309cf44a6e4e0c49d9aa48ac3ca4c
       env:
@@ -58,14 +58,15 @@ runs:
         JIRA_API_TOKEN: ${{ env.JIRA_API_TOKEN }}
 
     - name: Transition Jira Issue
+      if: steps.initialize-jira-issue-parameters.outputs.can-transition == 'true'
       # v3
       uses: atlassian/gajira-transition@4749176faf14633954d72af7a44d7f2af01cc92b
       with:
-        issue: "OSOE-484"
-        transition: "Resolve"
+        issue: steps.initialize-jira-issue-parameters.outputs.key
+        transition: steps.initialize-jira-issue-parameters.outputs.transition
 
     #- name: Remove Label
-    #  if: steps.check-done.outputs.contains-label == 'true' || steps.check-resolve.outputs.contains-label == 'true'
+    #  if: steps.initialize-jira-issue-parameters.outputs.can-transition == 'true'
     #  # v1.1.1
     #  uses: mondeja/remove-labels-gh-action@9c39e92024101ccb2473aeee441d4923adf58089
     #  with:
