--- a/.github/actions/auto-resolve-done-jira-issue/action.yml
+++ b/.github/actions/auto-resolve-done-jira-issue/action.yml
@@ -59,7 +59,8 @@ runs:
         transition: ${{ steps.initialize-jira-issue-parameters.outputs.transition }}
 
     - name: Remove Label
-      if: steps.initialize-jira-issue-parameters.outputs.can-transition == 'true'
+      # Fork PR runs won't have permissions to remove labels.
+      if: steps.initialize-jira-issue-parameters.outputs.can-transition == 'true' && github.event.pull_request.head.repo.fork == false
       # v1.1.1
       uses: mondeja/remove-labels-gh-action@9c39e92024101ccb2473aeee441d4923adf58089
       with:
