--- a/.github/workflows/post-pull-request-checks-automation.yml
+++ b/.github/workflows/post-pull-request-checks-automation.yml
@@ -36,6 +36,8 @@ jobs:
         JIRA_API_TOKEN: ${{ secrets.JIRA_API_TOKEN }}
 
     - name: Remove Label
+      # Fork PR runs won't have permissions to remove labels.
+      if: github.event.pull_request.head.repo.fork == false
       # v1.1.1
       uses: mondeja/remove-labels-gh-action@9c39e92024101ccb2473aeee441d4923adf58089
       with:
