--- a/.github/workflows/post-pull-request-checks-automation.yml
+++ b/.github/workflows/post-pull-request-checks-automation.yml
@@ -4,6 +4,19 @@ on:
   workflow_call:
     secrets:
       # We can't access org secrets here so they need to be passed in.
+      MERGE_TOKEN:
+        required: false
+        description: >
+          An authentication token, like a personal access token (PAT), that provides write access to the repository and
+          can be used to merge the pull request. This is necessary because when a pull request is merged while being
+          authenticated with the default GITHUB_TOKEN of a workflow run, then the merge won't trigger other workflows
+          (like a build workflow on the target branch). This is an intentional limitation, see:
+          https://docs.github.com/en/actions/using-workflows/triggering-a-workflow#triggering-a-workflow-from-a-workflow.
+          Thus, we need to use an alternative authentication token. See
+          https://docs.github.com/en/authentication/keeping-your-account-and-data-secure/creating-a-personal-access-token
+          for info on how to create PATs; you'll need one with the "repo" scope. Check out
+          https://github.com/peter-evans/create-pull-request/blob/main/docs/concepts-guidelines.md#triggering-further-workflow-runs
+          for instructions on what other tokens you can use.
       JIRA_BASE_URL:
         required: true
         description: >
@@ -20,11 +33,20 @@ jobs:
   post-pull-request-checks-automation:
     runs-on: ubuntu-latest
     steps:
+    - name: Set Merge Token
+      if: github.event.pull_request != ''
+      shell: pwsh
+      env:
+        MERGE_TOKEN: ${{ secrets.MERGE_TOKEN }}
+      run: |
+        $mergeToken = $Env:MERGE_TOKEN ? $Env:MERGE_TOKEN : "${{ secrets.GITHUB_TOKEN }}"
+        "MERGE_TOKEN=$mergeToken" >> $Env:GITHUB_ENV
+
     - name: Automatically Merge Pull Request
       if: github.event.pull_request != ''
       uses: Lombiq/GitHub-Actions/.github/actions/auto-merge-pull-request@issue/OSOE-477
       env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        GITHUB_TOKEN: ${{ env.MERGE_TOKEN }}
 
     - name: Automatically Resolve or Done Jira issue
       if: github.event.pull_request != ''
