Revert "Checking the secret directly"
This reverts commit 3aaddb1ec2eade2eab0a006986661b5ce1b9172c.

--- a/.github/workflows/post-pull-request-checks-automation.yml
+++ b/.github/workflows/post-pull-request-checks-automation.yml
@@ -39,7 +39,7 @@ jobs:
       env:
         MERGE_TOKEN: ${{ secrets.MERGE_TOKEN }}
       run: |
-        if ([string]::IsNullOrEmpty("${{ secrets.MERGE_TOKEN }}"))
+        if ([string]::IsNullOrEmpty($Env:MERGE_TOKEN ))
         {
             Write-Output "Empty"
         }
