--- a/.github/actions/auto-merge-pull-request/action.yml
+++ b/.github/actions/auto-merge-pull-request/action.yml
@@ -13,7 +13,7 @@ runs:
 
     - name: Check Mergeability
       id: check-mergeability
-      # Fork PR runs won't have permissions to add labels to or merge PRs.
+      # Fork PR runs won't have permissions to remove labels, nor do we want to allow auto-merging them.
       if: github.event.pull_request.head.repo.fork == false
       uses: Lombiq/GitHub-Actions/.github/actions/check-pull-request-labels@issue/OSOE-477
       with:
