Revert "Upgrade check-spelling version to 0.0.21"
This reverts commit 9fdec5b3741ea05cb874381e4e4a695b4cd15d6b.

--- a/.github/actions/spelling/action.yml
+++ b/.github/actions/spelling/action.yml
@@ -41,7 +41,7 @@ runs:
   steps:
   - name: Check Spelling
     # Prerelease, this commit includes a specific fix we utilize. Use v0.0.21 once available.
-    uses: check-spelling/check-spelling@v0.0.21
+    uses: check-spelling/check-spelling@86a22cfaff3846dbd788acea5d18cf5db6d40dd1
     with:
       dictionary_source_prefixes: ${{ inputs.dictionary-source-prefixes }}
       extra_dictionaries: ${{ inputs.extra-dictionaries }}
