--- a/.github/workflows/build-dotnet.yml
+++ b/.github/workflows/build-dotnet.yml
@@ -88,6 +88,10 @@ jobs:
         - ${{ inputs.timeout-minutes }}
     timeout-minutes: ${{ matrix.timeout-minutes }}
     steps:
+    - name: Deprecation Warning
+      shell: pwsh
+      run: |
+        Write-Output '::warning::This workflow is deprecated. Use build-and-test-dotnet instead, that can also execute tests.'
     - name: Checkout
       uses: Lombiq/GitHub-Actions/.github/actions/checkout@dev
 
