--- a/.github/workflows/build-and-test-orchard-core.yml
+++ b/.github/workflows/build-and-test-orchard-core.yml
@@ -89,6 +89,11 @@ on:
         description: >
           If set to "true", the Azurite Azure Blob Storage emulator will be installed and started. This is necessary if
           the app's UI tests connect to Azure Blob Storage for file storage.
+      test-disable:
+        required: false
+        type: string
+        default: "false"
+        description: Disables test execution completely if set to "true".
       test-filter:
         required: false
         type: string
@@ -177,6 +182,7 @@ jobs:
         location: ${{ inputs.build-directory}}
 
     - name: Tests
+      if: inputs.test-disable = 'false'
       uses: Lombiq/GitHub-Actions/.github/actions/test-dotnet@issue/MENT-157
       with:
         build-directory: ${{ inputs.build-directory }}
