--- a/.github/actions/test-dotnet/action.yml
+++ b/.github/actions/test-dotnet/action.yml
@@ -68,7 +68,7 @@ runs:
       working-directory: ${{ inputs.build-directory }}
       run: |
         $switches = @{
-          Solution = "(Get-ChildItem ${{ inputs.solution-path }}).FullName"
+          Solution = (Get-ChildItem ${{ inputs.solution-path }}).FullName
           Verbosity = "${{ inputs.test-verbosity }}"
           Filter = "${{ inputs.test-filter }}"
           Configuration = "${{ inputs.test-configuration }}"
