--- a/.github/workflows/spelling.yml
+++ b/.github/workflows/spelling.yml
@@ -63,7 +63,7 @@ jobs:
           "CHECKOUT_TOKEN=$checkoutToken" >> $Env:GITHUB_ENV
 
       - name: Checkout
-        uses: Lombiq/GitHub-Actions/.github/actions/checkout@issue/CARE-265
+        uses: Lombiq/GitHub-Actions/.github/actions/checkout@dev
         with:
           token: ${{ env.CHECKOUT_TOKEN }}
 
