--- a/.github/actions/spelling/action.yml
+++ b/.github/actions/spelling/action.yml
@@ -35,7 +35,7 @@ inputs:
     description: Repository with default configuration to use, the default from Check Spelling is ''.
     required: false
     type: string
-    default: Lombiq/GitHub-Actions@issue/OSOE-84
+    default: Lombiq/GitHub-Actions@issue/OSOE-84-final
 
 runs:
   using: "composite"
