Revert "Merge remote-tracking branch 'origin/dev' into issue/OSOE-84-final"
This reverts commit 2e9b92ad153965246d34c909e3c900f2bb6bb737, reversing
changes made to 0d9808784cad08c89a299c33ed100793880ba62b.

--- a/.github/actions/spelling/action.yml
+++ b/.github/actions/spelling/action.yml
@@ -19,7 +19,6 @@ inputs:
       cspell:css/css.txt
       cspell:csharp/csharp.txt
       cspell:software-terms/src/software-terms.txt
-      cspell:node/node.txt
       cspell:typescript/typescript.txt
       cspell:rust/rust.txt
       cspell:npm/npm.txt
@@ -30,12 +29,12 @@ inputs:
     description: Spelling configuration directory
     required: false
     type: string
-    default: .github/actions/spelling
+    default: .github/actions/check-spelling
   spell-check-this:
     description: Repository with default configuration to use, the default from Check Spelling is ''.
     required: false
     type: string
-    default: Lombiq/GitHub-Actions@issue/OSOE-84-final
+    default: Lombiq/GitHub-Actions@dev
 
 runs:
   using: "composite"
