--- a/.github/workflows/build-and-test-orchard-core.yml
+++ b/.github/workflows/build-and-test-orchard-core.yml
@@ -147,6 +147,7 @@ jobs:
         enable-nuget-caching: ${{ inputs.build-enable-nuget-caching }}
         enable-npm-caching: ${{ inputs.build-enable-npm-caching }}
         cache-version: ${{ inputs.build-cache-version }}
+        create-binary-log: ${{ inputs.build-create-binary-log}}
 
     - name: Set up SQL Server
       if: inputs.set-up-sql-server == 'true'
