--- a/.github/actions/build-dotnet/action.yml
+++ b/.github/actions/build-dotnet/action.yml
@@ -120,9 +120,12 @@ runs:
         restore-keys: ${{ steps.detect-cache-configuration.outputs.restore-keys }}
 
     - name: Build and Static Code Analysis
+      id: build
       shell: pwsh
       working-directory: ${{ inputs.directory }}
       run: |
+        Initialize-ArtifactNameSuffix '${{ inputs.build-directory }}'
+
         $buildSwitches = @'
             ${{ inputs.dotnet-build-switches }}
         '@
@@ -151,6 +154,6 @@ runs:
       uses: actions/upload-artifact@v3.1.1
       if: (success() || failure()) && inputs.create-binary-log == 'true'
       with:
-        name: build.binlog
+        name: build-binary-log-${{ steps.build.outputs.artifact-name-suffix }}.binlog
         path: ${{ inputs.directory }}/build.binlog
         if-no-files-found: ignore
