--- a/.github/workflows/create-jira-issues-for-community-activities.yml
+++ b/.github/workflows/create-jira-issues-for-community-activities.yml
@@ -49,7 +49,7 @@ on:
 
 jobs:
   create-jira-issues-for-community-activities:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     steps:
     - name: Create Jira issues for community activities
       uses: Lombiq/GitHub-Actions/.github/actions/create-jira-issues-for-community-activities@dev
