--- a/.github/workflows/deploy-to-azure-app-service.yml
+++ b/.github/workflows/deploy-to-azure-app-service.yml
@@ -16,7 +16,7 @@ on:
       machine-type:
         required: false
         type: string
-        default: ubuntu-latest
+        default: ubuntu-22.04
         description: The name of the type of machine to run the workflow under.
       dotnet-version:
         required: false
