--- a/.github/workflows/publish-nuget.yml
+++ b/.github/workflows/publish-nuget.yml
@@ -54,7 +54,7 @@ on:
 
 jobs:
   publish-nuget:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     # Timeout-minutes is in the matrix only because the config can't be set directly from the inputs, see:
     # https://github.com/actions/runner/issues/1555.
     strategy:
