--- a/.github/workflows/validate-submodule-pull-request.yml
+++ b/.github/workflows/validate-submodule-pull-request.yml
@@ -18,7 +18,7 @@ on:
 
 jobs:
   validate-submodule-pull-request:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     steps:
     - name: Add Jira Issue Code to Pull Request
       if: github.event.pull_request != ''
