Revert reversion of our precious code
- that happened because I had reverted the accidental merge of OSOE-84-final into dev

--- a/.github/actions/spelling/action.yml
+++ b/.github/actions/spelling/action.yml
@@ -19,6 +19,7 @@ inputs:
       cspell:css/css.txt
       cspell:csharp/csharp.txt
       cspell:software-terms/src/software-terms.txt
+      cspell:node/node.txt
       cspell:typescript/typescript.txt
       cspell:rust/rust.txt
       cspell:npm/npm.txt
@@ -29,12 +30,12 @@ inputs:
     description: Spelling configuration directory
     required: false
     type: string
-    default: .github/actions/check-spelling
+    default: .github/actions/spelling
   spell-check-this:
     description: Repository with default configuration to use, the default from Check Spelling is ''.
     required: false
     type: string
-    default: Lombiq/GitHub-Actions@dev
+    default: Lombiq/GitHub-Actions@issue/OSOE-84-final
 
 runs:
   using: "composite"
