Better release name

--- a/.github/actions/add-azure-application-insights-release-annotation/action.yml
+++ b/.github/actions/add-azure-application-insights-release-annotation/action.yml
@@ -30,6 +30,6 @@ runs:
       run: |
         $params = @{
             ApplicationInsightsResourceId = '${{ inputs.application-insights-resource-id }}'
-            ReleaseName = $Env:RELEASE_NAME ? $Env:RELEASE_NAME : $Env:GITHUB_RUN_NUMBER
+            ReleaseName = $Env:RELEASE_NAME ? $Env:RELEASE_NAME : "Run #$Env:GITHUB_RUN_NUMBER of $Env:GITHUB_WORKFLOW"
         }
         Add-ReleaseAnnotation @params
