--- a/.github/workflows/deploy-to-azure-app-service.yml
+++ b/.github/workflows/deploy-to-azure-app-service.yml
@@ -199,7 +199,7 @@ jobs:
     - name: Add Azure Application Insights Release Annotation
       uses: Lombiq/GitHub-Actions/.github/actions/add-azure-application-insights-release-annotation@issue/NEST-325
       with:
-        application-insights-resource-id: "${{ inputs.application-insights-resource-id }}"
+        application-insights-resource-id: ${{ inputs.application-insights-resource-id }}
 
     #- name: Start Web App Slot
     #  run: |
