Trying to break spell checking again

--- a/.github/workflows/spelling-this-repo.yml
+++ b/.github/workflows/spelling-this-repo.yml
@@ -1,6 +1,6 @@
 name: Spelling
 # This is the same workflow you'd find in our other submodules. Unlike the rest of the workflows in this repo, this one
-# is meant to actually run here, so don't call it from other repos.
+# is meant to actually run here, so don't call it from othr repos.
 
 on:
   pull_request:
