Testing updated syntax in spelling action so that the first parameter in a list of default values is not shifted up

--- a/.github/actions/spelling/action.yml
+++ b/.github/actions/spelling/action.yml
@@ -11,7 +11,7 @@ inputs:
   extra-dictionaries:
     description: Space delimited list of URLs (or `prefix:`+path) to additional word lists
     required: false
-    default:
+    default: |
       cspell:filetypes/filetypes.txt
       cspell:django/django.txt
       cspell:aws/aws.txt
