Adding the commit SHA to release annotations too

--- a/.github/actions/add-azure-application-insights-release-annotation/action.yml
+++ b/.github/actions/add-azure-application-insights-release-annotation/action.yml
@@ -31,5 +31,6 @@ runs:
         $params = @{
             ApplicationInsightsResourceId = '${{ inputs.application-insights-resource-id }}'
             ReleaseName = $Env:RELEASE_NAME ? $Env:RELEASE_NAME : "Run #$Env:GITHUB_RUN_NUMBER of $Env:GITHUB_WORKFLOW"
+            ReleaseProperties = @{"CommitSha" = $Env:GITHUB_SHA }
         }
         Add-ReleaseAnnotation @params
